--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/4c536a6bd5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
     <title>Calculator</title>
@@ -18,7 +19,7 @@
         <div class="calc-body">
             <div class="calc-input">
                 <div class="num-input" id="numList"></div>
-                <div class="num-output" id="answer"></div>
+                <div class="num-output" id="answer">0</div>
             </div>
             <div class="calc-panel">
                 <div class="number" id="clearAll">CE</div>
@@ -32,11 +33,11 @@
                 <div class="number" id="4" data-number>4</div>
                 <div class="number" id="5" data-number>5</div>
                 <div class="number" id="6" data-number>6</div>
-                <div class="number" id="+" data-operator>+</div>
+                <div class="number" id="-" data-operator>-</div>
                 <div class="number" id="1" data-number>1</div>
                 <div class="number" id="2" data-number>2</div>
                 <div class="number" id="3" data-number>3</div>
-                <div class="number" id="-" data-operator>-</div>
+                <div class="number" id="+" data-operator>+</div>
                 <div class="number" id="reversal">±</div>
                 <div class="number" id="0" data-number>0</div>
                 <div class="number" id="point">.</div>
@@ -44,7 +45,11 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <h1>Copyright © 2022 padrone1225</h1>
+        <a href="https://github.com/padrone1225" target="_blank">
+            <i class="fab fa-github"></i></a>
+    </footer>
 </body>
 
 </html>
